--- a/index.html
+++ b/index.html
@@ -22,22 +22,7 @@
 		border: 1px solid red;
 	}*/
 </style>
-<script type="text/javascript">
-		// function valid(){	
-		// 	// document.getElementById('fname').style.borderColor = "red";
-			
-		// 	var x = $('#fname').val().length;
-		// 	if (x <1) 
-		// 	{
-		// 		document.getElementById("fname").style.borderColor = "red";
-		// 	}
-		// 	else{
 
-		// 	 alert('bhvfbgvg');
-		// 	}
-		// }
-		
-	</script>
 <body>
 	<div>
 		<nav class="navbar navbar-inverse">
@@ -86,6 +71,13 @@
 				    <label class="control-label col-sm-2" for="pwd">Password:</label>
 				    <div class="col-sm-10"> 
 				      <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
+				    </div>
+				  </div>
+
+				  <div class="form-group">
+				    <label class="control-label col-sm-2" for="pwd">Confirm password:</label>
+				    <div class="col-sm-10"> 
+				      <input type="password" class="form-control" id="con_password" placeholder="Enter password" name="con_password">
 				    </div>
 				  </div>
 
