--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		border-radius: 10px;
 		padding: 30px;
 	}
+	.error_alert{
+		color: red;
+	}
 	
 	/*input:focus{
 		border: 1px solid red;
@@ -49,28 +52,32 @@
 				  <div class="form-group">
 				    <label class="control-label col-sm-2" for="email">Fullname:</label>
 				    <div class="col-sm-10">
-				      <input type="text" class="form-control" id="fname" placeholder="Enter email" name="fname">
+				      <input type="text" class="form-control" id="fname" placeholder="Enter email" name="fname"> 
+				      <span id="nameError" class="error_alert"></span>
 				    </div>
 				  </div>
 
 				  <div class="form-group">
 				    <label class="control-label col-sm-2" for="pwd">Email:</label>
 				    <div class="col-sm-10"> 
-				      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+				      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email"> 
+				      <p id="emailError" class="error_alert"></p>
 				    </div>
 				  </div>
 
 				  <div class="form-group">
 				    <label class="control-label col-sm-2" for="pwd">username:</label>
 				    <div class="col-sm-10"> 
-				      <input type="text" class="form-control" id="username" placeholder="Enter username" name="username" autofocus>
+				      <input type="text" class="form-control" id="username" placeholder="Enter username" name="username" autofocus> 
+				      <p id="usernameError" class="error_alert"></p>
 				    </div>
 				  </div>
 
 				  <div class="form-group">
 				    <label class="control-label col-sm-2" for="pwd">Password:</label>
 				    <div class="col-sm-10"> 
-				      <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
+				      <input type="password" class="form-control" id="password" placeholder="Enter password" name="password"> 
+				      <p id="passwordError" class="error_alert"></p>
 				    </div>
 				  </div>
 
@@ -78,6 +85,15 @@
 				    <label class="control-label col-sm-2" for="pwd">Confirm password:</label>
 				    <div class="col-sm-10"> 
 				      <input type="password" class="form-control" id="con_password" placeholder="Enter password" name="con_password">
+				      <p id="pass2Error" class="error_alert"></p>
+				    </div>
+				  </div>
+
+				  <div class="form-group">
+				    <label class="control-label col-sm-2" for="pwd">Number:</label>
+				    <div class="col-sm-10"> 
+				      <input type="number" class="form-control" id="number" placeholder="Enter password" name="number">
+				      <p id="numberError" class="error_alert"></p>
 				    </div>
 				  </div>
 
